# TaskJuggler2

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  INSTALL  Mainpage.dox  Makefile.am  Makefile.cvs  README  TODO  acinclude.m4  configure.in.in  taskjuggler.lsm  taskjuggler.spec
Examples/BigProject/Project1/: .cvsignore  Makefile.am  Project1.tjp  project1.tjp
Examples/BigProject/Project2/: Makefile.am  Project2.tjp  project2.tjp
Examples/FirstProject/: .cvsignore  AccountingSoftware.tjp  Makefile.am
Examples/ShiftSchedule/: .cvsignore  Makefile.am  ShiftSchedule.tjp
TaskJuggler/: .cvsignore  FileManager.cpp  FileManager.h  FindDialog.ui  MainWidget.ui  Makefile.am  ManagedFileInfo.cpp  ManagedFileInfo.h  ManagedReportInfo.cpp  ManagedReportInfo.h  ProjectTemplate.tjp  ReportLayers.h  ReportManager.cpp  ReportManager.h  RichTextDisplay.ui  TaskJuggler_client.cpp  TjGanttChart.cpp  TjPrintReport.cpp  TjPrintReport.h  TjPrintTaskReport.cpp  TjPrintTaskReport.h  TjReport.cpp  TjReport.h  TjReportCell.cpp  TjReportCell.h  TjReportColumn.h  TjReportRow.cpp  TjReportRow.h  TjResourceReport.cpp  TjResourceReport.h  TjTaskReport.cpp  TjTaskReport.h  main.cpp  mainwidget.cpp  taskjuggler.cpp  taskjuggler.desktop  taskjuggler.h  taskjugglerui.rc  taskjugglerview.cpp  taskjugglerview.h  (+2 more)
TaskJuggler/pics/: Makefile.am
TaskJugglerUI/: .gitignore  FileManager.cpp  FileManager.h  FindDialog.ui  KPrinterWrapper.h  MainWidget.ui  Makefile.am  ManagedFileInfo.cpp  ManagedFileInfo.h  ManagedReportInfo.cpp  ManagedReportInfo.h  ProjectTemplate.tjp  ReportController.ui  ReportLayers.h  ReportManager.cpp  ReportManager.h  RichTextDisplay.ui  TaskJugglerUI  TemplateSelector.h  TemplateSelector.ui  TemplateSelector.ui.h  TjDatePicker.ui  TjGanttChart.cpp  TjGanttChart.h  TjGanttZoomStep.cpp  TjGanttZoomStep.h  TjHTMLReport.cpp  TjHTMLReport.h  TjLineAccounter.cpp  TjLineAccounter.h  TjObjPosTable.cpp  TjObjPosTable.h  TjObjPosTableEntry.h  TjPrintReport.cpp  TjPrintReport.h  TjPrintResourceReport.cpp  TjPrintResourceReport.h  TjPrintTaskReport.cpp  TjPrintTaskReport.h  TjReport.cpp  (+36 more)
TaskJugglerUI/Templates/: Makefile.am
TaskJugglerUI/Templates/en_US/: Blank_Project.tjp  Large_Project.tjp  Makefile.am  Simple_Project.tjp
TaskJugglerUI/libkdepim/: README
docs/en/: .cvsignore  ChangeLog.xml  FirstProject.xml  Makefile.am  PropertyReference.xml  PropertyReference.xsl  README  SyntaxReference.xml  UsageGuide.xml  changelog.sgml  firstproject.sgml  index.html  index.sgml.in  kde-doc.patch  pdftex.cfg  reference.sgml  taskjuggler.css  taskjuggler.dsl  taskjuggler.sgml.in  taskjuggler.xml.in
ktjview/: .cvsignore  Makefile.am  README  ktjgantt.cpp  ktjgantt.h  ktjview.cpp  ktjview.desktop  ktjview.h  ktjview_part.cpp  ktjview_part.h  ktjview_part.rc  ktjview_shell.rc  ktvcanvasitem.cpp  ktvcanvasitem.h  ktvconnector.cpp  ktvconnector.h  ktvheader.cpp  ktvheader.h  ktvreport.cpp  ktvreport.h  ktvtaskcanvas.cpp  ktvtaskcanvas.h  ktvtaskcanvasitem.cpp  ktvtaskcanvasitem.h  ktvtaskcanvasview.cpp  ktvtaskcanvasview.h  ktvtasktable.cpp  ktvtasktable.h  ktvtasktableitem.cpp  ktvtasktableitem.h  main.cpp  taskcolumntype.cpp  taskcolumntype.h  tasktip.cpp  tasktip.h  timedialog.cpp  timedialog.h  x-tjxml.desktop
ktjview2/: .cvsignore  AUTHORS  BUGS  CHANGES  Doxyfile  Makefile.am  Makefile.in  README  README.filters  README.kate  ResourceItem.cpp  ResourceItem.h  TODO  TaskItem.cpp  TaskItem.h  configure  configure.in  configure.in.in  editorView.cpp  editorView.h  filter.cpp  filter.h  filterDialog.cpp  filterDialog.h  filterWidget.ui  gantt.ui  kdgantt.patch  klistviewsearchline.h  koKoolBar.cc  ktjReport.cpp  ktjReport.h  ktjReportDialog.cpp  ktjReportDialog.h  ktjReportView.cpp  ktjReportView.h  ktjResourceReport.cpp  ktjResourceReport.h  ktjTaskReport.cpp  ktjTaskReport.h  ktjUtils.cpp  (+31 more)
ktjview2/docs/en/: Makefile.am  index.docbook
ktjview2/kdgantt/: .cvsignore  KDGanttSemiSizingControl.cpp  KDGanttView.cpp  KDGanttView.h  KDGanttViewEventItem.cpp  KDGanttViewItem.cpp  KDGanttViewItem.h  KDGanttViewSubwidgets.cpp  KDGanttViewTaskLink.cpp  KDGanttViewTaskLink.h  Makefile.am  README
ktjview2/pics/: Makefile.am
ktjview2/pixmaps/: Makefile.am
ktjview2/po/: Makefile.am  cs.po  da.po  ktjview2.pot
ktjview2/qicstable/: .cvsignore  LICENSE  Makefile.am  QicsCell.cpp  QicsCell.h  QicsCellCommon.cpp  QicsCellCommon.h  QicsCellDisplay.cpp  QicsCellDisplay.h  QicsCellStyle.cpp  QicsCellStyle.h  QicsCheckCellDisplay.cpp  QicsCheckCellDisplay.h  QicsColumn.cpp  QicsColumn.h  QicsColumnHeader.cpp  QicsColumnHeader.h  QicsComboCellDisplay.cpp  QicsComboCellDisplay.h  QicsDataItem.cpp  QicsDataItem.h  QicsDataItemFormatter.cpp  QicsDataItemFormatter.h  QicsDataModel.cpp  QicsDataModel.h  QicsDataModelDefault.cpp  QicsDataModelDefault.h  QicsDimensionManager.cpp  QicsDimensionManager.h  QicsGrid.cpp  QicsGrid.h  QicsGridCommon.cpp  QicsGridCommon.h  QicsGridInfo.cpp  QicsGridInfo.h  QicsGridStyle.cpp  QicsGridStyle.h  QicsHeader.cpp  QicsHeader.h  QicsHeaderGrid.cpp  (+51 more)
ktjview2/qicstable/doc/: QicsCellCommon_8h-source.html  QicsCellDisplay_8h-source.html  QicsCellStyle_8h-source.html  QicsCell_8h-source.html  QicsCheckCellDisplay_8h-source.html  QicsColumnHeader_8h-source.html  QicsColumn_8h-source.html  (+188 more)
taskjuggler/: .cvsignore  .gitignore  Account.cpp  Account.h  AccountList.cpp  AccountList.h  AccountTreeIterator.h  Allocation.cpp  Allocation.h  Booking.h  BookingList.cpp  BookingList.h  CSVAccountReport.cpp  CSVAccountReport.h  CSVAccountReportElement.cpp  CSVAccountReportElement.h  CSVPrimitives.cpp  CSVPrimitives.h  CSVReport.cpp  CSVReport.h  CSVReportElement.cpp  CSVReportElement.h  CSVResourceReport.cpp  CSVResourceReport.h  CSVResourceReportElement.cpp  CSVResourceReportElement.h  CSVTaskReport.cpp  CSVTaskReport.h  CSVTaskReportElement.cpp  CSVTaskReportElement.h  CoreAttributes.cpp  CoreAttributes.h  CoreAttributesList.cpp  CoreAttributesList.h  CoreAttributesTreeIterator.cpp  CoreAttributesTreeIterator.h  CustomAttribute.h  CustomAttributeDefinition.h  DecisionNode.cpp  DecisionNode.h  (+174 more)
(+422 files in other folders)
