noinst_LTLIBRARIES = libkdgantt.la

METASOURCES = AUTO

INCLUDES  = $(all_includes)

libkdgantt_la_SOURCES = \
			KDGanttView.cpp			\
			KDGanttViewEventItem.cpp	\
			KDGanttViewItem.cpp		\
			KDGanttViewSubwidgets.cpp	\
			KDGanttViewSummaryItem.cpp	\
			KDGanttViewTaskItem.cpp		\
			KDGanttViewTaskLink.cpp		\
			KDGanttViewTaskLinkGroup.cpp	\
			KDGanttMinimizeSplitter.cpp		\
			KDGanttSemiSizingControl.cpp		\
			KDGanttSizingControl.cpp		\
			KDGanttXMLTools.cpp			\
			KDGanttViewItemDrag.cpp	\
			itemAttributeDialog.ui

noinst_HEADERS =	\
			KDGanttViewSubwidgets.h		\
			KDGanttMinimizeSplitter.h		\
			KDGanttSemiSizingControl.h		\
			KDGanttSizingControl.h		\
			itemAttributeDialog.ui.h	\
			qlayoutengine_p.h		\
			KDGanttView.h			\
			KDGanttViewEventItem.h		\
			KDGanttViewItem.h		\
			KDGanttViewSummaryItem.h	\
			KDGanttViewTaskItem.h		\
			KDGanttViewTaskLink.h		\
			KDGanttViewTaskLinkGroup.h	\
			KDGanttViewItemDrag.h	\
			KDGanttXMLTools.h
