noinst_LTLIBRARIES = libqicstable.la

METASOURCES = AUTO

INCLUDES  = $(all_includes)

libqicstable_la_SOURCES = QicsGridInfo.cpp \
	QicsStyle.cpp \
	QicsCellStyle.cpp \
	QicsGridStyle.cpp \
	QicsStyleManager.cpp \
	QicsSelectionManager.cpp \
	QicsDimensionManager.cpp \
	QicsMappedDimensionManager.cpp \
	QicsSpanManager.cpp \
	QicsSort.cpp \
	QicsSorter.cpp \
	QicsCellCommon.cpp \
	QicsGridCommon.cpp \
	QicsCell.cpp \
	QicsRow.cpp \
	QicsColumn.cpp \
	QicsMainGrid.cpp \
	QicsHeader.cpp \
	QicsRowHeader.cpp \
	QicsColumnHeader.cpp \
	QicsTableRegionDrag.cpp \
	QicsRowColumnDrag.cpp \
	QicsGrid.cpp \
	QicsScreenGrid.cpp \
	QicsTableGrid.cpp \
	QicsHeaderGrid.cpp \
	QicsCellDisplay.cpp \
	QicsTextCellDisplay.cpp \
	QicsCheckCellDisplay.cpp \
	QicsComboCellDisplay.cpp \
	QicsWidgetCellDisplay.cpp \
	QicsDataItemFormatter.cpp \
	QicsDataModel.cpp \
	QicsDataItem.cpp \
	QicsDataModelDefault.cpp \
	QicsScrollBarScroller.cpp \
	QicsScrollManager.cpp \
	QicsUtil.cpp \
	QicsTableCommon.cpp \
	QicsTable.cpp \
	QicsNamespace.cpp
