####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index.html index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html 

docprefix = $(prefix)/share/doc/packages

install-data-local:
	$(mkinstalldirs) $(prefix)/doc/taskjuggler/
	$(INSTALL_DATA) $(srcdir)/Reference.txt $(docprefix)/taskjuggler/
	$(INSTALL_DATA) $(srcdir)/index.html $(docprefix)/taskjuggler/index.html
	$(INSTALL_DATA) $(srcdir)/index-1.html $(docprefix)/taskjuggler/index-1.html
	$(INSTALL_DATA) $(srcdir)/index-2.html $(docprefix)/taskjuggler/index-2.html
	$(INSTALL_DATA) $(srcdir)/index-3.html $(docprefix)/taskjuggler/index-3.html
	$(INSTALL_DATA) $(srcdir)/index-4.html $(docprefix)/taskjuggler/index-4.html
	$(INSTALL_DATA) $(srcdir)/index-5.html $(docprefix)/taskjuggler/index-5.html
	$(INSTALL_DATA) $(srcdir)/index-6.html $(docprefix)/taskjuggler/index-6.html

uninstall-local:
	-rm -f $(docprefix)/taskjuggler/index.html
	-rm -f $(docprefix)/taskjuggler/index-1.html
	-rm -f $(docprefix)/taskjuggler/index-2.html
	-rm -f $(docprefix)/taskjuggler/index-3.html
	-rm -f $(docprefix)/taskjuggler/index-4.html
	-rm -f $(docprefix)/taskjuggler/index-5.html
	-rm -f $(docprefix)/taskjuggler/index-6.html

####### kdevelop will overwrite this part!!! (end)############
